2006-09-01  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (lm_connection_new_with_context),
	(lm_connection_send_raw):
	* loudmouth/lm-message-handler.c: (lm_message_handler_new),
	(lm_message_handler_is_valid):
	* loudmouth/lm-message-node.c: (lm_message_node_add_child),
	(lm_message_node_set_attribute), (lm_message_node_get_attribute),
	(lm_message_node_get_child), (lm_message_node_find_child):
	* loudmouth/lm-parser.c:
	* loudmouth/lm-utils.c: (_lm_utils_hostname_to_punycode),
	(lm_utils_get_localtime):
	- Patch from Martyn to add argument checks all around.

2006-08-23  Martyn Russell  <martyn@imendio.com>

	* examples/lm-send-async.c:
	* examples/lm-send-sync.c: 
	* examples/test-lm.c: Make use of lm_connection_set_jid() and make
	sure we only use the part before the '@' for the username when
	authenticating, this means that these test clients will now work
	with GoogleTalk.

2006-08-22  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-message-node.c: (lm_message_node_to_string):
	- Add a check that node isn't NULL.

2006-08-04  Mikael Hallendal  <micke@imendio.com>

	* acinclude.m4: 
	- Fix a auto* warning.
	- Fixes LM-46.

2006-08-03  Richard Hult  <richard@imendio.com>

	* loudmouth/lm-sha.c: 
	- Make the sha functions static so they are not exposed to 
	  apps/libraries using loudmout.
	- Fixes LM-47.

2006-08-01  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl-gnutls.c: (_lm_ssl_read):
	- EOF on 0 bytes read.
	- Fixes LM-45.

2006-06-27  Mikael Hallendal  <micke@imendio.com>

	* Release 1.1.2

	* configure.ac: 
	- Bumped to 1.1.2
	* NEWS:
	- Added news about 1.1.2

2006-06-25  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (lm_connection_close):
	- Patch from Martyn Russel
	- Make sure that disconnect is signalled if the connection is closed
	  during opening phase.
	- Fixes LM-43

2006-06-16  Mikael Hallendal  <micke@imendio.com>

	* configure.ac:
	* loudmouth-1.0.pc.in: